--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@babel/preset-react": "^7.13.13",
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
+        "browser-sync": "^2.27.4",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
         "less": "^4.1.1",
