Image paths and readme updated

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
-APP_NAME=Laravel
+APP_NAME="Online Book Depot"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+APP_PHOTO_PATH=public/images
+
+MIX_REACT_APP_API_PATH=http://localhost:8000/api
+APP_PROFILE_PICTURE_PATH=images/profile-pictures/
+MIX_REACT_APP_DOCS_PATH=/storage/docs
+MIX_REACT_APP_URL=http://localhost:8000/
+SANCTUM_STATEFUL_DOMAINS=localhost:3000
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -19,6 +26,7 @@ CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
+SESSION_DOMAIN=localhost
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
