Image paths and readme updated

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Online Book Depot"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Ua6XejzFBOYAC/QIXsFOM9TIb4onu7iODPk7Lfhdsic=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 APP_PHOTO_PATH=public/images
